infrastructure/ingress-deployment.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expensifier-app-ingress
  labels:
    app: expensifier-app-ingress
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: expensifier.mrnustik.net
      http:
        paths:
          - path: /api
            backend:
              service:
                name: expensifier-api-service
                port:
                  number: 80
            pathType: Prefix
          - path: / 
            backend:
              service:
                name: expensifier-client-service
                port:
                  number: 80
            pathType: Prefix
